--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.20",
+    "@dicebear/adventurer": "^9.2.2",
+    "@dicebear/avatars": "^4.10.8",
+    "@dicebear/bottts": "^9.2.2",
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/initials": "^9.2.2",
+    "@dicebear/micah": "^9.2.2",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
